--- a/BBModel.ipynb
+++ b/BBModel.ipynb
@@ -1259,7 +1259,9 @@
     "# Step 3\n",
     "#\n",
     "# Build model from dataset to predict winners of games\n",
-    "# Predict and create Submission File"
+    "# Predict and create Submission File\n",
+    "\n",
+    "# Test"
    ]
   }
  ],
